@@ -264,14 +264,15 @@ sub get_role
     "named" => "NETWORK",
     "netfs" => "SYSTEM",
     "network" => "SYSTEM",
-    "nfs"	=> "FILE_SERVER",
-    "nfs-user-server"	=> "FILE_SERVER",
-    "nfs-kernel-server"	=> "FILE_SERVER",
+    "nfs"	=> "FILE_SERVER_NFS",
+    "nfs-user-server"	=> "FILE_SERVER_NFS",
+    "nfs-kernel-server"	=> "FILE_SERVER_NFS",
     "nfslock" => "SYSTEM",
     "nscd" => "NETWORK",
     "ntpd" => "NTP_SERVER",
     "ntpdate" => "NTP_SERVER",
     "ntp-client" => "NTP_CLIENT",
+    "ntp-server" => "NTP_SERVER",
     "ntp-simple" => "NTP_SERVER",
     "oftpd" => "FTP_SERVER",
     "oops" => "NETWORK",
@@ -293,7 +294,7 @@ sub get_role
     "rhnsd" => "SYSTEM",
     "rsync" => "NETWORK",
     "rsyncd" => "NETWORK",
-    "samba" => "FILE_SERVER",
+    "samba" => "FILE_SERVER_SMB",
     "saslauthd" => "SYSTEM",	 # FIXME: maybe a SECURITY role makes sense?
     "sendmail" => "MTA",
     "servers" => "NETWORK",
